#10612 alignment issue

--- a/public/less/frontend/components/top-bar-v1.less
+++ b/public/less/frontend/components/top-bar-v1.less
@@ -76,6 +76,10 @@
 
         div.navbar-right{
             margin-right: 15px !important;
+            @media screen and (min-width: 690px) {
+                margin-left: 15px;
+                margin-top: 5px;
+            }
         }
 
     }
